[tool.poetry]
name = "ice-cream-dataops"
version = "0.1.0"
description = ""
authors = ["KunioOkada <kunio.okada@cognite.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<4.0"
cognite-toolkit = "0.3.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
